--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "lawonga.intentify"
-        minSdkVersion 21
+        minSdkVersion 24
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -49,6 +49,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile 'com.google.android.gms:play-services:9.2.1'
+
+    // Firebase
     compile 'com.google.firebase:firebase-core:9.2.0'
     compile 'com.google.firebase:firebase-auth:9.2.0'
     compile 'com.google.firebase:firebase-database:9.2.0'
@@ -63,6 +65,9 @@ dependencies {
 
     // BaseApplication
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+
+    // Beacon
+    compile 'org.altbeacon:android-beacon-library:2+'
 
 }
 apply plugin: 'com.google.gms.google-services'
