--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile 'com.google.firebase:firebase-core:9.2.0'
     compile 'com.google.firebase:firebase-auth:9.2.0'
     compile 'com.google.firebase:firebase-database:9.2.0'
+    compile "com.google.firebase:firebase-messaging:9.2.0"
 
     // ReactiveX
     compile 'io.reactivex:rxandroid:1.1.0'
